# My-Ring

./: CMakeLists.txt  TURKCE_KURULUM.md  sdl_webcam.cpp
